--- a/gaya.css
+++ b/gaya.css
@@ -1,1 +1,62 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 
+body{
+    background-image: url('https://i.pinimg.com/736x/3f/b8/84/3fb8841792753ceb57c4a0a11d39ec20.jpg');
+}
+.kotak{
+    max-width: 1080px;
+    margin: 20px auto;
+    background-color: white;
+    border: 5px solid black;
+
+}
+.header{
+    background-color: gray;
+    padding: 20px;
+
+}
+.menu{
+    background-color: gainsboro;
+}
+.menu ul li{
+    list-style-type: none;
+    display: inline;
+}
+.satu{
+    width: 350px;
+    border: 5px solid black;
+    float: left;
+    margin: 5px 5px 5px 5px;
+    padding-left: 20px;
+}
+img{
+    width: 100%;
+}
+.dua{
+    width: 300px;
+    border: 5px solid black;
+    float: left;
+    margin: 5px 5px 5px 5px;
+    padding-left: 20px;
+
+}
+.clearfix{
+    clear: both;
+}
+footer{
+    background-color: black;
+    color: white;
+}
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+.Logo {
+    width: 350px;
+}
